--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ repositories {
 dependencies {
     compile "javax.servlet:javax.servlet-api:+"
     compileOnly "org.jetbrains:annotations:+"
+    compile group: 'javax.servlet', name: 'jstl', version: '1.1.+'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
