--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
-apply plugin: 'jetty'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -13,8 +12,10 @@ repositories {
 }
 
 dependencies {
+    compile 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:+'
+    compile 'org.glassfish.web:javax.servlet.jsp.jstl:+'
+
     compile "javax.servlet:javax.servlet-api:+"
     compileOnly "org.jetbrains:annotations:+"
-    compile group: 'javax.servlet', name: 'jstl', version: '1.1.+'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
