Added cryptography Added user authentication Added login page

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -1,7 +1,13 @@
-beanreport=This is what timer bean reports:
-header=My first jsp page (servlet response)
-newsession=Start new session
-selectedlocale=User-selected locale
-selecttz=To know time, select timezone:
-through=Through
-title=My first jsp page (response)
+main.beanreport=This is what timer bean reports:
+main.header=My first jsp page (servlet response)
+login.password=Password:
+login.caption=Please log into the system
+login.username=User name:
+main.newsession=Start new session
+main.selectedlocale=User-selected locale
+main.selecttz=To know time, select timezone:
+main.through=Through
+main.title=My first jsp page (response)
+login.enter=Login...
+login.title=Login page
+main.currentlogin=You are logged in as
