--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 user_dao_class=model.dao.UserDAO_h2
 database_driver=org.h2.Driver
-database_uri=jdbc:h2:file:E:/Programming/Java/MyServlet/src/test/resources
-username=
-password=
+database_uri=jdbc:h2:file:E:/Programming/Java/MyServlet/src/test/resources;SCHEMA=USERDATA
+username=sa
+password=123
