--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ out
 gen
 /src/test/resources.lock.db
 /src/test/resources.trace.db
+/src/test/resources.h2.db
+/src/main/tomcat-conf/server.xml
+/src/test/resources/config.properties
