Excluded local dependencies

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,6 @@
 user_dao_class=model.dao.UserDaoH2
 database_driver=org.h2.Driver
-database_uri=jdbc:h2:file:E:/Programming/Java/MyServlet/src/test/resources;SCHEMA=USERDATA
+database_uri=jdbc:h2:file:D:/Aldor/Projects/MyServlets/src/test/resources;SCHEMA=USERDATA
 username=sa
 password=123
 sha_digest=true
