--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ dependencies {
     compile 'org.glassfish.web:javax.servlet.jsp.jstl:+'
     compile 'javax.servlet:javax.servlet-api:+'
 
-    compile 'org.apache.logging.log4j:log4j-api:+'
-    compile 'org.apache.logging.log4j:log4j-core:+'
-    compile 'org.apache.logging.log4j:log4j-web:+'
+    compile 'org.slf4j:slf4j-api:+'
+    compile 'ch.qos.logback:logback-classic:+'
+    compile 'ch.qos.logback:logback-core:+'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'com.h2database:h2:+'
