--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,6 @@ gradle-app.setting
 *.iml
 out
 gen
-/src/test/resources.lock.db
-/src/test/resources.trace.db
-/src/test/resources.h2.db
 /src/test/resources/config.properties
-/src/test/resources/resources.h2.db
 /src/main/tomcat-conf/
+/src/test/userdatabase.*
