--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ gradle-app.setting
 ### Example user template
 
 # IntelliJ project files
-.idea
-out
+/.idea
+/out
 gen
 /src/test/userdatabase.*
+/classes
