Fixed container-based auth to work with non-ascii logins

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -3,6 +3,7 @@ main.header=My first jsp page (servlet response)
 login.password=Password:
 login.caption=Please log into the system
 login.username=User name:
+login.retry=Login error, please try again
 main.newsession=Start new session
 main.selectedlocale=User-selected locale
 main.selecttz=To know time, select timezone:
