--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-user_dao_class=model.dao.UserDaoH2
+dao_class=model.dao.databases.H2GlobalDAO
 database_driver=org.h2.Driver
 database_uri=jdbc:h2:file:E:/Programming/Java/MyServlets/src/test/userdatabase;SCHEMA=USERDATA
 username=sa
