Solved "unused" properties problems

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 main.beanreport=This is what timer bean reports:
 main.header=My first jsp page (servlet response)
 login.password=Password:
