--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -13,3 +13,14 @@ main.title=My first jsp page (response)
 login.enter=Login...
 login.title=Login page
 main.currentlogin=You are logged in as
+register.repeatPassword=Repeat password:
+register.do=Register
+register.username=Think of a username:
+login.registered=Already registered?
+login.notRegistered=Not registered?
+login.signIn=Sign in...
+register.password=Think of a password:
+register.begin=Register...
+alert.noUsername=Please fill in user name
+alert.pwdMismatch=Passwords do not match!
+alert.pwdTooShort=Password must be at least 3 characters long
