--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
         <realm-name>AppSecurity</realm-name>
         <form-login-config>
             <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/loginerror.jsp</form-error-page>
+            <form-error-page>/login.jsp</form-error-page>
         </form-login-config>
     </login-config>
 
