--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -24,3 +24,5 @@ register.begin=Register...
 alert.noUsername=Please fill in user name
 alert.pwdMismatch=Passwords do not match!
 alert.pwdTooShort=Password must be at least 3 characters long
+login.badLogin=Unknown user name
+login.badPassword=Incorrect password
