--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,7 @@
          version="3.1">
     <display-name>Time Web App</display-name>
 
-    <filter-mapping>
-        <filter-name>SecurityFilter</filter-name>
-        <servlet-name>MyFirstServlet</servlet-name>
-    </filter-mapping>
+    <!-- Container-managed security -->
 
     <security-role>
         <role-name>authenticated-user</role-name>
@@ -35,12 +32,9 @@
         <auth-method>FORM</auth-method>
         <realm-name>AppSecurity</realm-name>
         <form-login-config>
-            <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/login.jsp</form-error-page>
+            <form-login-page>/main/login.jsp</form-login-page>
+            <form-error-page>/main/login-error.jsp</form-error-page>
         </form-login-config>
     </login-config>
-
-
-
 
 </web-app>
