Fixed DAO logic

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -26,3 +26,4 @@ alert.pwdMismatch=Passwords do not match!
 alert.pwdTooShort=Password must be at least 3 characters long
 login.badLogin=Unknown user name
 login.badPassword=Incorrect password
+alert.unTooLong=User name too long (50 chars max)
