Removed simultaneous multiple database support in DAO

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -27,3 +27,5 @@ alert.pwdTooShort=Password must be at least 3 characters long
 login.badLogin=Unknown user name
 login.badPassword=Incorrect password
 alert.unTooLong=User name too long (50 chars max)
+alert.unTooShort=User name too short (4 chars min)
+register.userExists=Username already taken
