Adding new user to database: complete.

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,8 +1,8 @@
 # suppress inspection "UnusedProperty" for whole file
-dao_class=model.dao.PropsDAO
-database_driver=
-database_uri=
-username=
-password=
+dao_class=model.dao.databases.H2GlobalDAO
+database_driver=org.h2.Driver
+database_uri=jdbc:h2:file:E:/Programming/Java/MyServlets/src/test/userdatabase;SCHEMA=USERDATA
+username=sa
+password=123
 sha_digest=true
 container_security=false
