--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,4 +5,5 @@ database_uri=jdbc:h2:file:E:/Programming/Java/MyServlets/src/test/userdatabase;S
 username=sa
 password=123
 sha_digest=true
-container_security=true
+container_security=false
+autologin=\u0432\u0430\u0441\u044F
