--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     compile 'org.glassfish.web:javax.servlet.jsp.jstl:+'
     compile 'javax.servlet:javax.servlet-api:+'
+    compile 'org.glassfish:javax.json:+'
 
     compile 'org.slf4j:slf4j-api:+'
     compile 'ch.qos.logback:logback-classic:+'
