--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:+'
     compile 'ch.qos.logback:logback-core:+'
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile 'com.h2database:h2:+'
+    testCompile 'junit:junit:+'
+    compile 'com.h2database:h2:+'       //    testCompile 'com.h2database:h2:+'
 }
 
 task testWar(type: War) {
