--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -9,7 +9,6 @@ repositories {
 
 dependencies {
     compileOnly 'org.jetbrains:annotations:+'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-
+    testCompile 'junit:junit:+'
 }
 
