--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -35,4 +35,5 @@ details.update=Update user data
 details.gotomain=Go to main page...
 details.fullname=Full name
 details.email=Email
-details.header=Your details
+details.header=User details
+yourdetails.header=Your details
