--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,5 +5,4 @@ database_uri=jdbc:h2:file:E:/Programming/Java/MyServlets/info/userdatabase;SCHEM
 username=sa
 password=123
 sha_digest=true
-container_security=false
-autologin=\u0432\u0430\u0441\u044F
+container_security=true
