--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -1,6 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 main.beanreport=This is what timer bean reports:
-main.header=My first jsp page (servlet response)
+main.header=Welcome to my green network!
 login.password=Password:
 login.caption=Please log into the system
 login.username=User name:
@@ -9,7 +9,7 @@ main.logout=Log out
 main.selectedlocale=User-selected locale
 main.selecttz=To know time, select timezone:
 main.through=Through
-main.title=My first jsp page (response)
+main.title=My green network
 login.enter=Login...
 login.title=Login page
 main.currentlogin=You are logged in as
@@ -30,9 +30,12 @@ alert.unTooLong=User name too long (50 chars max)
 alert.unTooShort=User name too short (4 chars min)
 register.userExists=Username already taken
 details.title=User details
-details.unconfirmed=You haven't confirmed your user details. Please review and update your data.
+details.unconfirmed=You haven't confirmed your user details. Please review your data.
 details.update=Update user data
 details.gotomain=Go to main page...
 details.fullname=Full name
 details.email=Email
 details.header=User details
+main.mymessages=My messages
+details.find.user=Find user...
+details.search=Search
