--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -39,3 +39,4 @@ details.header=User details
 main.mymessages=My messages
 details.find.user=Find user...
 details.search=Search
+details.users.found=Users found:
