Friends search and filter

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -40,3 +40,4 @@ main.mymessages=My messages
 details.find.user=Find user...
 details.search=Search
 details.users.found=Users found:
+details.show.friends=Show all friends
