Add and remove friends

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -41,3 +41,6 @@ details.find.user=Find user...
 details.search=Search
 details.users.found=Users found:
 details.show.friends=Show all friends
+details.addfriend=Add to friends
+details.remfriend=Remove from friends
+main.users=Users
