ALPHA VERSION COMPLETE

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -44,3 +44,17 @@ details.show.friends=Show all friends
 details.addfriend=Add to friends
 details.remfriend=Remove from friends
 main.users=Users
+main.warn.unread=You have unread messages!
+loading.messages=Loading messages...
+main.message.view=Message view
+message.button.reply=Reply
+message.button.delete=Delete
+message.button.close=Close
+message.button.private=Private message
+loading.users=Loading users...
+filter.all=All
+filter.friends=Friends
+filter.non.friends=Non-friends
+message.button.send=Send
+message.button.cancel=Cancel
+details.filter=Filter
