--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 # suppress inspection "UnusedProperty" for whole file
-dao_class=model.dao.databases.H2GlobalDAO
-database_driver=org.h2.Driver
-database_uri=jdbc:h2:file:E:/Programming/Java/MyServlets/info/userdatabase;SCHEMA=USERDATA;AUTO_SERVER=TRUE
-username=sa
-password=123
+dao_class=model.dao.databases.MySqlGlobalDao
+database_driver=com.mysql.cj.jdbc.Driver
+database_uri=jdbc:mysql://localhost:3306/userdatabase?useSSL=false
+username=epam
+password=1234
 sha_digest=true
 container_security=true
