--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -58,3 +58,6 @@ filter.non.friends=Non-friends
 message.button.send=Send
 message.button.cancel=Cancel
 details.filter=Filter
+main.message.sorting=Message sorting
+main.sorting.time=Time
+main.sorting.chain=Reply chain
