Conversations jsp started

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -61,3 +61,4 @@ details.filter=Filter
 main.message.sorting=Message sorting
 main.sorting.time=Time
 main.sorting.chain=Reply chain
+main.conversations=My conversations
