--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -62,3 +62,9 @@ main.message.sorting=Message sorting
 main.sorting.time=Time
 main.sorting.chain=Reply chain
 main.conversations=My conversations
+main.time=Time
+conv.createdby=Created by:
+main.conv.filter=Conversations
+main.conv.my=Started by me
+main.conv.all=All watched
+loading.conversations=Loading conversations...
