Writing and replying OK

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -47,7 +47,6 @@ main.users=Users
 main.warn.unread=You have unread messages!
 loading.messages=Loading messages...
 main.message.view=Message view
-message.button.reply=Reply
 message.button.delete=Delete
 message.button.close=Close
 message.button.private=Private message
@@ -67,3 +66,12 @@ main.conv.filter=Conversations
 main.conv.my=Started by me
 main.conv.all=All watched
 loading.conversations=Loading conversations...
+main.private.header=Private messages
+main.conversation.header=Conversation:
+main.conversation.participants=Participants:
+conv.table.name=Name
+conv.table.created.by=Created by
+conv.table.created.at=At
+conv.table.description=Description
+main.new.message=Write new
+message.recip=To:
