--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -75,3 +75,7 @@ conv.table.created.at=At
 conv.table.description=Description
 main.new.message=Write new
 message.recip=To:
+conv.new.name=Enter conversation name
+conv.new.desc=Enter description for your new conversation
+conv.button.create=Create conversation
+conv.new.show=Create new
