--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -79,3 +79,4 @@ conv.new.name=Enter conversation name
 conv.new.desc=Enter description for your new conversation
 conv.button.create=Create conversation
 conv.new.show=Create new
+message.button.reply=Reply
