--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,3 +8,4 @@ sha_digest=true
 container_security=true
 database_init_uri=jdbc:mysql://localhost:3306?useSSL=false
 database_init_script=E:/Programming/Java/MyServlets/info/mysqlsetup.sql
+show_legacy=true
