Conversation invites reworked

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -80,3 +80,4 @@ conv.new.desc=Enter description for your new conversation
 conv.button.create=Create conversation
 conv.new.show=Create new
 message.button.reply=Reply
+main.conv.invites=Invitations
