Batch accept/decline

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -81,3 +81,5 @@ conv.button.create=Create conversation
 conv.new.show=Create new
 message.button.reply=Reply
 main.conv.invites=Invitations
+conv.button.accept=Accept
+conv.button.decline=Decline
