Invitation counting and warning

--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -83,3 +83,4 @@ message.button.reply=Reply
 main.conv.invites=Invitations
 conv.button.accept=Accept
 conv.button.decline=Decline
+main.warn.invites=You have invitations!
