--- a/src/main/resources/jsp.properties
+++ b/src/main/resources/jsp.properties
@@ -85,3 +85,4 @@ conv.button.accept=Accept
 conv.button.decline=Decline
 main.warn.invites=You have invitations!
 conv.ban.confirm=Ban user $1 from conversation \u201c$2\u201d?
+message.delete.confirm=Delete message?
