--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,5 +6,5 @@ username=sa
 password=123
 sha_digest=true
 container_security=false
-autologin=\u0432\u0430\u0441\u044F
+# autologin=\u0432\u0430\u0441\u044F
 show_legacy=true
